--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 Change Log:
 ----------------------------------------------------------------------
+2.2.13 - 2025-03-04
+----------------------------------------------------------------------
+- Improve: Ical parser.
+- Fix: Build script.
+
 2.2.6.4-beta-1 - 2020-02-04
 ----------------------------------------------------------------------
 - Fix: Can’t import events
